--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,8 @@ verify_ssl = true
 [packages]
 facebook-sdk = "*"
 python-dotenv = "*"
+pillow = "*"
+imageio = "*"
 
 [requires]
 python_version = "3.7"
